--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,6 +35,7 @@ dist.jlink.output=${dist.jlink.dir}/La_Cuadra_de_Salvador
 excludes=
 file.reference.jcalendar-1.4.jar=C:\\Users\\Usuario\\Downloads\\jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-1=C:\\Users\\Kevin\\Downloads\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.zip=C:\\Users\\Daniel\\Downloads\\jcalendar-1.4.zip
 file.reference.mysql-connector-j-8.0.33.jar=D:\\Usuario\\Documentos\\Eu\\Conectores Java-BD\\mysql-connector-j-8.0.33.jar
 file.reference.mysql-connector-j-8.0.33.jar-1=D:\\Usuario\\Documentos\\Eu\\Ciclo 7\\Curso Integrador I\\Proyecto 1\\mysql-connector-j-8.0.33.jar
 file.reference.mysql-connector-java-8.0.27.jar=C:\\Users\\Daniel\\Downloads\\mysql-connector-java-8.0.27.jar
@@ -54,7 +55,8 @@ javac.classpath=\
     ${file.reference.jcalendar-1.4.jar}:\
     ${file.reference.mysql-connector-java-8.0.27.jar}:\
     ${file.reference.mysql-connector-j-8.0.33.jar-1}:\
-    ${file.reference.jcalendar-1.4.jar-1}
+    ${file.reference.jcalendar-1.4.jar-1}:\
+    ${file.reference.jcalendar-1.4.zip}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
