--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,7 +37,9 @@ file.reference.jcalendar-1.4.jar=C:\\Users\\Usuario\\Downloads\\jcalendar-1.4.ja
 file.reference.jcalendar-1.4.jar-1=C:\\Users\\Kevin\\Downloads\\jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-2=D:\\Usuario\\Documentos\\Eu\\Ciclo 7\\Curso Integrador I\\La_Cuadra_de_Salvador-Proyeto versiones\\jcalendar-1.4.jar
 file.reference.jcommon-1.0.23.jar=D:\\Usuario\\Documentos\\Eu\\Ciclo 7\\Curso Integrador I\\La_Cuadra_de_Salvador-Proyeto versiones\\jcommon-1.0.23.jar
+file.reference.jcommon-1.0.23.jar-1=C:\\Users\\Kevin\\OneDrive - Universidad Tecnologica del Peru\\Documents\\jcommon-1.0.23\\jcommon-1.0.23\\jcommon-1.0.23.jar
 file.reference.jfreechart-1.0.19.jar=D:\\Usuario\\Documentos\\Eu\\Ciclo 7\\Curso Integrador I\\La_Cuadra_de_Salvador-Proyeto versiones\\jfreechart-1.0.19.jar
+file.reference.jfreechart-1.5.4.jar=C:\\Users\\Kevin\\OneDrive - Universidad Tecnologica del Peru\\Documents\\jar_files (1)\\jfreechart-1.5.4.jar
 file.reference.mysql-connector-j-8.0.33.jar=D:\\Usuario\\Documentos\\Eu\\Conectores Java-BD\\mysql-connector-j-8.0.33.jar
 file.reference.mysql-connector-j-8.0.33.jar-1=D:\\Usuario\\Documentos\\Eu\\Ciclo 7\\Curso Integrador I\\Proyecto 1\\mysql-connector-j-8.0.33.jar
 file.reference.mysql-connector-java-8.0.27.jar=C:\\Users\\Daniel\\Downloads\\mysql-connector-java-8.0.27.jar
@@ -60,7 +62,9 @@ javac.classpath=\
     ${file.reference.jcalendar-1.4.jar-1}:\
     ${file.reference.jcalendar-1.4.jar-2}:\
     ${file.reference.jcommon-1.0.23.jar}:\
-    ${file.reference.jfreechart-1.0.19.jar}
+    ${file.reference.jfreechart-1.0.19.jar}:\
+    ${file.reference.jcommon-1.0.23.jar-1}:\
+    ${file.reference.jfreechart-1.5.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
